# Backend/src/controllers/Metadata/metadataController.js
@@ -21,3 +21,14 @@ export const insertMetadata = async (req, res) => {
     res.status(500).json({ error: 'Server Error' });
   }
 };
+
+export const getAllMetadata = async (req, res) => {
+  try {
+    const result = await prisma.metadata_mst.findMany();
+
+    res.status(200).json(result);
+  } catch (error) {
+    console.error(error);
+    res.status(500).json({ error: 'Server Error' });
+  }
+};
