# Backend/src/routes/metadata/routes.js
@@ -1,8 +1,9 @@
 import express from 'express';
-import { insertMetadata } from '../../controllers/Metadata/metadataController.js';
+import { insertMetadata, getAllMetadata } from '../../controllers/Metadata/metadataController.js';
 
 const router = express.Router();
 
 router.post('/metadata', insertMetadata);
+router.get('/metadata', getAllMetadata);
 
 export { router as metadataRouter };
